# tapa-micro-mailer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  kafka-local.docker-compose.yml  local.env
example/: README.md  docker-compose.yml  drafter.py  inspector.py  local.env  requirements.txt
src/: config.rs  mailer.rs  main.rs  utils.rs
src/mailer/: mod.rs  resettable_bucket.rs
src/messages/: message_draft.rs  message_fail.rs  message_sent.rs  message_traits.rs  mod.rs
