[package]
name = "tapa-micro-mailer"
version = "0.1.0"
authors = ["Aditya Kresna <kresna@tapalogi.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.2"
futures = "0.3.0"
hostname = "0.3.1"
log = "0.4.11"
mimalloc = { version = "0.1.22", default-features = false }
openssl = { version = "0.10.32", features = ["vendored"] }
regex = "1.4.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
rdkafka = { version = "0.24.0", features = ["ssl-vendored", "libz-static", "gssapi-vendored", "zstd-pkg-config"] }

[dependencies.tokio]
version = "0.2"
default-features = false
features = [ "full" ]

[dependencies.lettre]
version = "0.10.0-alpha.4"
default-features = false
features = [
    "builder",
    "smtp-transport",
    "tokio02-native-tls",
]
