[package]
name = "tapa-micro-mailer"
version = "0.1.0-alpha.2"
authors = ["Aditya Kresna <kresna@tapalogi.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.2"
hostname = "0.3.1"
log = "0.4.11"
openssl = { version = "0.10.32", features = ["vendored"] }
regex = "1.4.2"
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
secstr = "0.4.0"
tapa-trait-serde = { version = "0.1.2", features = ["json"] }
tapa-cgloop-nats = "0.1.0"
anyhow = "1.0.38"

[dependencies.tokio]
version = "0.2"
default-features = false
features = [ "full" ]

[dependencies.lettre]
version = "0.10.0-alpha.4"
default-features = false
features = [
    "builder",
    "smtp-transport",
    "tokio02-native-tls",
]
