[package]
name = "tapa-micro-mailer"
version = "0.1.0-beta.0"
authors = ["Aditya Kresna <kresna@tapalogi.com>"]
edition = "2018"

[dependencies.lettre]
version = "0.10.0-alpha.5"
default-features = false
features = [
    "builder",
    "smtp-transport",
    "tokio02-native-tls",
]

[dependencies.tokio]
version = "0.2"
default-features = false
features = [ "full" ]

[dependencies]
anyhow = "1.0.38"
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.12"
env_logger = "0.8.2"
hostname = "0.3.1"
log = "0.4.11"
openssl = { version = "0.10.32", features = ["vendored"] }
regex = "1.4.2"
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
secstr = "0.4.0"
tapa-cgloop-nats = "0.2.0"
tapa-trait-serde = { version = "0.1.2", features = ["json"] }
